--- a/style.css
+++ b/style.css
@@ -2,25 +2,40 @@ body{
     margin: 2%;
     border: 1px solid black;
     background-color: #b3b3b3;
+    height: 100dvh;
 }
 #message{
     line-height:300px;
     text-align:center;
-    
-    width: 388px;
-    height:320px;
+    width: 30%;
+    height:50%;
     border:5px solid black;
     color: white;
     margin:0 auto;
+    margin-top: 3%;
     margin-bottom:50px;
     background-color: #8e68ff;
     font-size: 120%;
 }
 .preview{
-    width:10%;
-    margin-left:17%;
-    border: 10px solid black;
+    width:13%;
 }
 img{
     width:95%;
+    opacity: .75;
+
+}
+img:hover{
+    opacity: 1;
+    border: 2px solid;
+}
+img:focus{
+    opacity: 1;
+    border: 2px solid;
+}
+
+.flex{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
 }
